# ratmp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  build_bindings.bat  build_bindings.sh  build_cpp.bat  build_cpp.sh  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  changelog.txt  import_deps_from_vcpkg.py  install.sh  o  ols.json  test.bat  test.sh
data/themes/: default-dark.ini  default-light.ini  slate.ini
example_plugin/: build.bat  example_plugin.odin
sdk/: ratmp_sdk.odin
src/: main_linux.odin  main_windows.odin  resources.rc
src/analysis/: analysis.odin
src/app/: audio_client.cpp  audio_client.h  common.h  embedded.gen.h  files.cpp  files.h  main.cpp  main.h  metadata.cpp  metadata.h  os.cpp  resources.rc  stats.cpp  stats.h  stream.cpp  stream.h  theme.cpp  theme.h  tracklist.cpp  tracklist.h  ui.cpp  ui.h  util.cpp  util.h  widgets.cpp  widgets.h
src/audio/: audio.odin
src/bindings/: common.h  portaudio
src/client/: auto_playlist_editor.odin  client.odin  default_layout.ini  defs.odin  dialog.odin  dialog_linux.odin  dialog_windows.odin  file_windows.odin  files.odin  files_linux.odin  filter.odin  folders_view.odin  font.odin  help.odin  layout.odin  metadata.odin  persist.odin  playlist_list.odin  playlist_table.odin  preferences.odin  sdk_impl.odin  selection.odin  settings.odin  side_by_side.odin  tests.odin  theme.odin  track_category.odin  track_table.odin  visualizers.odin  widgets.odin  window_manager.odin  window_procs.odin
src/cpp/: audio.h  audio_portaudio.cpp  audio_wasapi.cpp  dwm.cpp  (+5 more)
(+303 files in other folders)
